--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -28,6 +28,8 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
@@ -58,6 +60,7 @@
     -->
 
     <!--TEMPLATES-->
+    
     <!--TEMPLATES END-->
 
     <!--
@@ -84,6 +87,13 @@
     -->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/vendor/ember-data.js"></script>
+    <script src="/js/vendor/ember-resolver.js"></script>
+    <script src="/js/vendor/ember.js"></script>
+    <script src="/js/vendor/handlebars.js"></script>
+    <script src="/js/vendor/jquery.js"></script>
+    <script src="/bootstrap/js/bootstrap.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
