added simple styles for product page, added less mixins

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -28,3 +28,12 @@
 // @import 'pages/signup.less';
 //
 // etc.
+
+// mixins
+@import 'mixins/mixins-importer.less';
+
+// global styles
+@import 'global.less';
+
+// pages
+@import 'pages/product.less';
