--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>New Sails App</title>
+    <title>Cat App</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!--  
+    {{! <!--  
         Stylesheets and Preprocessors
         ==============================
 
@@ -25,20 +25,26 @@
             + Change the order of your CSS files
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
-    -->
-
+    --> }}
     <!--STYLES-->
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+
   </head>
 
-  <body>
-    {{{body}}}
+  <body style="padding-top: 50px;">
+    {{>header}}
+
+    <div class="container">
+      <div class="container-inner" style="padding-top: 10px;">
+       {{{body}}}
+      </div>
+    </div>
 
 
 
-    <!--
+    {{! <!--
         Client-side Templates
         ========================
 
@@ -57,13 +63,13 @@
             + Use a different template engine (handlebars, jade, dust, etc.)
             + Internationalize your client-side templates using a server-side
               stringfile before they're served.
-    -->
+    --> }}
 
     <!--TEMPLATES-->
     
     <!--TEMPLATES END-->
 
-    <!--
+    {{! <!--
 
       Client-side Javascript
       ========================
@@ -84,7 +90,7 @@
           + Import scripts from other directories
           + Use a different preprocessor, like TypeScript
 
-    -->
+    --> }}
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
