--- a/views/catalog.handlebars
+++ b/views/catalog.handlebars
@@ -1,4 +1,4 @@
-<div id="wrappers">
+<div id="wrappers" class="catalog-page">
     <h1>{{catalog.name}}</h1>
     <div class="container">
         <div class="row">
