added category url for product page

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -2,7 +2,7 @@
     <section class="product-holder">
         <header>
             <h1>{{product}} - {{price}}</h1>
-            <a href="/catalog" class="glyphicon glyphicon-remove"></a>
+            <a href="{{catName}}" class="glyphicon glyphicon-remove"></a>
         </header>
         <div class="image-holder">
             <img src="{{imageSrc}}" alt="{{product}}" class="img-responsive">
