added hamburgerMenu styles, templates

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -39,3 +39,6 @@
 @import 'pages/product.less';
 @import 'pages/homepage.less';
 @import 'pages/catalog.less';
+
+// components
+@import 'components/hamburgerMenu.less';
