--- a/assets/styles/pages/homepage.less
+++ b/assets/styles/pages/homepage.less
@@ -1,3 +1,24 @@
+.navbar {
+	.navbar-header {
+		width: 100%;
+	}
+
+	.hamburger-link {
+		text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+		float: left;
+		height: 50px;
+		padding: 15px 15px;
+		font-size: 18px;
+		line-height: 20px;
+		color: #9D9D9D;
+		text-decoration: none;
+
+		&:hover {
+			color: #ffffff !important;
+			text-decoration: none;
+		}
+	}
+}
 
 .btn-home {
 	color: #ffffff;
