--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -6,22 +6,22 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    {{! <!--  
+    {{! <!--
         Stylesheets and Preprocessors
         ==============================
 
         You can always bring in CSS files manually with `<link>` tags, or asynchronously
-        using a solution like AMD (RequireJS).  Or, if you like, you can take advantage 
+        using a solution like AMD (RequireJS).  Or, if you like, you can take advantage
         of Sails' conventional asset pipeline (boilerplate Gruntfile).
 
         By default, stylesheets from your `assets/linker/styles` folder are included
         here automatically (between STYLES and STYLES END). Both CSS (.css) and LESS (.less)
         are supported. In production, your styles will be minified and concatenated into
         a single file.
-        
+
         To customize any part of the built-in behavior, just edit your Gruntfile.
         For example, here are a few things you could do:
-            
+
             + Change the order of your CSS files
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
@@ -32,12 +32,16 @@
 
   </head>
 
-  <body style="padding-top: 50px;">
-    {{>header}}
+  <body>
+    {{>hamburgerMenu}}
 
-    <div class="container">
-      <div class="container-inner" style="padding-top: 10px;">
-       {{{body}}}
+    <div class="page-holder remove-offset">
+      {{>header}}
+
+      <div class="container">
+        <div class="container-inner" style="padding-top: 10px;">
+         {{{body}}}
+        </div>
       </div>
     </div>
 
@@ -54,7 +58,7 @@
         By default, your Gruntfile is configured to automatically load and precompile
         client-side JST templates in your `assets/linker/templates` folder, then
         include them here automatically (between TEMPLATES and TEMPLATES END).
-        
+
         To customize this behavior to fit your needs, just edit your Gruntfile.
         For example, here are a few things you could do:
 
@@ -65,7 +69,7 @@
     --> }}
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
     {{! <!--
@@ -74,17 +78,17 @@
       ========================
 
       You can always bring in JS files manually with `script` tags, or asynchronously
-      on the client using a solution like AMD (RequireJS).  Or, if you like, you can 
+      on the client using a solution like AMD (RequireJS).  Or, if you like, you can
       take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
 
       By default, filesin your `assets/linker/js` folder are included here
       automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
       CoffeeScript (.coffee) are supported. In production, your scripts will be minified
       and concatenated into a single file.
-      
+
       To customize any part of the built-in behavior, just edit your Gruntfile.
       For example, here are a few things you could do:
-          
+
           + Change the order of your scripts
           + Import scripts from other directories
           + Use a different preprocessor, like TypeScript
