--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Cat</a>
+          <a class="hamburger-link" href="#">Hamburger Menu</a>
         </div>
     </div>
 </nav>
