added show action to hamburgerMenu

--- a/assets/styles/components/hamburgerMenu.less
+++ b/assets/styles/components/hamburgerMenu.less
@@ -1,3 +1,7 @@
+#navigation{
+  .clearfix();
+  padding: 20px;
+}
 .adjust-offset {
   -ms-transform: translate(87.5%, 0);
   -webkit-transform: translate(87.5%, 0);
