added to header home btn, added min-width to body for mobile devices

--- a/assets/styles/components/hamburgerMenu.less
+++ b/assets/styles/components/hamburgerMenu.less
@@ -2,10 +2,13 @@
   .clearfix();
   padding: 20px;
 }
+.hamburger-menu{
+  width: 70%;
+}
 .adjust-offset {
-  -ms-transform: translate(87.5%, 0);
-  -webkit-transform: translate(87.5%, 0);
-  transform: translate(87.5%, 0);
+  -ms-transform: translate(70%, 0);
+  -webkit-transform: translate(70%, 0);
+  transform: translate(70%, 0);
   -webkit-transition: transform 800ms;
   transition: transform 800ms;
   width: 100%;
