--- a/assets/styles/pages/homepage.less
+++ b/assets/styles/pages/homepage.less
@@ -1,8 +1,12 @@
 .navbar {
 	.navbar-header {
-		width: 100%;
+		float: none;
+		// right padding was added for centering home page btn
+		padding-right: 50px;
+		text-align: center;
 	}
 
+	.home-page,
 	.hamburger-link {
 		text-shadow: 0 -1px 0 rgba(0,0,0,.25);
 		float: left;
@@ -17,6 +21,10 @@
 			color: #ffffff !important;
 			text-decoration: none;
 		}
+	}
+
+	.home-page{
+		float: none;
 	}
 }
 
