--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-          <a class="hamburger-link" href="#">Hamburger Menu</a>
+          <a class="hamburger-link glyphicon glyphicon-align-justify" href="#"></a>
+          <a class="home-page glyphicon glyphicon-home" href="/"></a>
         </div>
     </div>
 </nav>
