fixing fonts for phusion

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -27,7 +27,7 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     --> }}
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="min/production.min.css">
     <!--STYLES END-->
 
   </head>
@@ -69,7 +69,7 @@
     --> }}
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
     {{! <!--
@@ -96,7 +96,7 @@
     --> }}
 
     <!--SCRIPTS-->
-    <script src="/min/production.min.js"></script>
+    <script src="min/production.min.js"></script>
     <!--SCRIPTS END-->
 
     <!--TODO delete this-->
