--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -27,7 +27,11 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     --> }}
     <!--STYLES-->
-    <link rel="stylesheet" href="min/production.min.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
   </head>
@@ -96,7 +100,12 @@
     --> }}
 
     <!--SCRIPTS-->
-    <script src="min/production.min.js"></script>
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/vendor/jquery.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.js"></script>
+    <script src="/js/vendor/handlebars.js"></script>
+    <script src="/js/vendor/ember.js"></script>
+    <script src="/js/vendor/ember-data.js"></script>
     <!--SCRIPTS END-->
 
     <!--TODO delete this-->
