ember actions and data-bindings were intagrated for hamburger menu

--- a/assets/styles/mixins/mixins-importer.less
+++ b/assets/styles/mixins/mixins-importer.less
@@ -4,8 +4,9 @@
 // normalize.less was combined with two css reset files
 // 1) normalize.less https://github.com/twbs/bootstrap/blob/master/less/normalize.less
 // 2) Reset CSS http://meyerweb.com/eric/tools/css/reset/
-@import "mixins/normalize.less";
+@import "normalize.less";
 
 // Layout
-@import "mixins/image.less";
-@import "mixins/clearfix.less";
+@import "image.less";
+@import "clearfix.less";
+@import "common-mixins.less";
