--- a/assets/js/app/templates/partials/_header.hbs
+++ b/assets/js/app/templates/partials/_header.hbs
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-          <a class="hamburger-link" href="#" {{action "toggleHamburgerMenu"}}>Hamburger Menu</a>
+            <a class="hamburger-link glyphicon glyphicon-align-justify" href="#" {{action "toggleHamburgerMenu"}}></a>
+            <a class="home-page glyphicon glyphicon-home" href="/"></a>
         </div>
     </div>
 </nav>
