--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -37,13 +37,17 @@
   </head>
 
   <body>
-        <div class="container">
-            <div id="ember-app"></div>
-            <div class="container-inner" style="padding-top: 10px;">
-                {{{body}}}
-            </div>
-        </div>
+    {{>hamburgerMenu}}
 
+    <div class="page-holder remove-offset">
+      {{>header}}
+
+      <div class="container">
+        <div class="container-inner" style="padding-top: 10px;">
+         {{{body}}}
+        </div>
+      </div>
+    </div>
 
     {{! <!--
         Client-side Templates
@@ -100,8 +104,8 @@
     <script src="/js/vendor/handlebars.js"></script>
     <script src="/js/vendor/ember.js"></script>
     <script src="/js/vendor/ember-data.js"></script>
-    <script src="/js/app/index.js"></script>
     <script src="/js/app/templates.js"></script>
+    <script src="/js/app/index.js"></script>
     <!--SCRIPTS END-->
 
     <!--TODO delete this-->
