--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,7 +6,7 @@
         </div>
     </div>
 </nav>
-<script type="text/x-handlebars">
-    {{\proxy id="#navbar_header"}}
-    {{\proxy id="#hamburger_link"}}
+<script type="text/x-handlebars" data-template-name="application">
+    \{{proxy id="#navbar_header"}}
+    \{{proxy id="#hamburger_link"}}
 </script>
