--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -104,6 +104,8 @@
     <script src="/js/vendor/handlebars.js"></script>
     <script src="/js/vendor/ember.js"></script>
     <script src="/js/vendor/ember-data.js"></script>
+    <script src="/js/app/handlebars.js"></script>
+    <script src="/js/app/proxy_view.js"></script>
     <script src="/js/app/templates.js"></script>
     <script src="/js/app/index.js"></script>
     <!--SCRIPTS END-->
