--- a/views/partials/hamburgerMenu.handlebars
+++ b/views/partials/hamburgerMenu.handlebars
@@ -72,6 +72,6 @@
     </ul>
   </div>
 </div>
-<script type="text/x-handlebars">
-  {{\proxy id="#hamburger_menu"}}
+<script type="text/x-handlebars" data-template-name="index">
+  \{{proxy id="#hamburger_menu"}}
 </script>
