work on ember integration

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -37,8 +37,8 @@
   </head>
 
   <body>
-    {{>hamburgerMenu}}
 
+    <div id="navigation_wrapper"></div>
     <div class="page-holder remove-offset">
       {{>header}}
 
@@ -106,8 +106,6 @@
     <script src="/js/vendor/handlebars.js"></script>
     <script src="/js/vendor/ember.js"></script>
     <script src="/js/vendor/ember-data.js"></script>
-    <script src="/js/app/handlebars.js"></script>
-    <script src="/js/app/proxy_view.js"></script>
     <script src="/js/app/templates.js"></script>
     <script src="/js/app/index.js"></script>
     <!--SCRIPTS END-->
