backbone events for hamburger menu link was added

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -110,6 +110,7 @@
     <script src="/js/app/proxy_view.js"></script>
     <script src="/js/app/templates.js"></script>
     <script src="/js/app/index.js"></script>
+    <script src="/js/app/backboneApp.js"></script>
     <!--SCRIPTS END-->
 
     <!--TODO delete this-->
