Backbone stubs were added for hamburger-link only for testing purposes and should be removed or changed when ember integration is completed

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -37,6 +37,8 @@
   </head>
 
   <body>
+    <!--This is a stub and should be removed when ember integration is completed-->
+    {{>hamburgerMenu}}
 
     <div id="navigation_wrapper"></div>
     <div class="page-holder remove-offset">
@@ -111,13 +113,5 @@
     <script src="/js/app/backboneApp.js"></script>
     <!--SCRIPTS END-->
 
-    <!--TODO delete this-->
-    <!--<script>-->
-      <!--$('.hamburger-link').on('click', function(e) {-->
-        <!--$('.hamburger-menu').toggleClass("slide-in-open");-->
-        <!--$('.page-holder').toggleClass("remove-offset adjust-offset");-->
-        <!--e.preventDefault();-->
-      <!--});-->
-    <!--</script>-->
   </body>
 </html>
