--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,12 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div id="navbar_header" class="navbar-header">
+
             <div id="hamburger_link_wrapper"></div>
+
+            <!--This is a stub and should be removed when ember integration is completed-->
+            <a id="hamburger_link" class="hamburger-link glyphicon glyphicon-align-justify" href="#" {{!action "toggleHamburgerMenu"}}></a>
+
             <a class="home-page glyphicon glyphicon-home" href="/"></a>
         </div>
     </div>
