--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -99,6 +99,8 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/vendor/jquery.js"></script>
+    <script src="/js/vendor/underscore.js"></script>
+    <script src="/js/vendor/backbone.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="/js/vendor/handlebars.js"></script>
     <script src="/js/vendor/ember.js"></script>
