ember click event on manual view (hamburger link) was added

--- a/assets/js/app/templates/hamburger-link.hbs
+++ b/assets/js/app/templates/hamburger-link.hbs
@@ -1,1 +1,1 @@
-<a id="hamburger-link" class="hamburger-link glyphicon glyphicon-align-justify" href="#" {{!action "toggleHamburgerMenu"}}></a>
+<a id="hamburger-link" class="hamburger-link glyphicon glyphicon-align-justify" href=""></a>
