add cat_components ember.js complicated module

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -105,6 +105,7 @@
     <script src="/js/vendor/handlebars.js"></script>
     <script src="/js/vendor/ember.js"></script>
     <script src="/js/vendor/ember-data.js"></script>
+    <script src="/js/vendor/cat_components.js"></script>
     <script src="/js/app/templates.js"></script>
     <script src="/js/app/index.js"></script>
     <script src="/js/app/backboneApp.js"></script>
