changed css preprocessor to stylus

--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -23,9 +23,9 @@ p{
     margin: 0 auto;
     padding: 20px 0;
 
-    .clearfix();
+    clearfix();
 }
 
 .page-holder{
-    .clearfix();
+    clearfix();
 }
