--- a/assets/styles/importer.styl
+++ b/assets/styles/importer.styl
@@ -14,32 +14,17 @@
  * or any other Grunt tasks you like.)
  */
 
-
-
-// For example:
-//
-// @import 'variables/colors.less';
-// @import 'mixins/foo.less';
-// @import 'mixins/bar.less';
-// @import 'mixins/baz.less';
-//
-// @import 'styleguide.less';
-// @import 'pages/login.less';
-// @import 'pages/signup.less';
-//
-// etc.
-
 // mixins
-@import 'mixins/mixins-importer.less';
+@import 'mixins/mixins-importer.styl';
 
 // global styles
-@import 'global.less';
+@import 'global.styl';
 
 // pages
-@import 'pages/product.less';
-@import 'pages/homepage.less';
-@import 'pages/catalog.less';
+@import 'pages/product.styl';
+@import 'pages/homepage.styl';
+@import 'pages/catalog.styl';
 
 // components
-@import 'components/hamburgerMenu.less';
-@import 'components/common-stuff.less';
+@import 'components/hamburgerMenu.styl';
+@import 'components/common-stuff.styl';
