--- a/assets/styles/mixins/clearfix.styl
+++ b/assets/styles/mixins/clearfix.styl
@@ -10,7 +10,7 @@
 //
 // Source: http://nicolasgallagher.com/micro-clearfix-hack/
 
-.clearfix() {
+clearfix() {
   &:before,
   &:after {
     content: " "; // 1
