--- a/assets/styles/mixins/image.styl
+++ b/assets/styles/mixins/image.styl
@@ -6,9 +6,9 @@
 // Responsive image
 //
 // Keep images from scaling beyond the width of their parents.
-.img-responsive(@display: block) {
+img-responsive(display = block) {
   width: 100%;
-  display: @display;
+  display: display;
   max-width: 100%; // Part 1: Set a maximum relative to the parent
   height: auto; // Part 2: Scale the height according to the width, otherwise you get stretching
 }
@@ -18,8 +18,8 @@
 //
 // Short retina mixin for setting background-image and -size. Note that the
 // spelling of `min--moz-device-pixel-ratio` is intentional.
-.img-retina(@file-1x; @file-2x; @width-1x; @height-1x) {
-  background-image: url("@{file-1x}");
+.img-retina(file-1x, file-2x, width-1x, height-1x) {
+  background-image: url("{" + file-1x + "}");
 
   @media
   only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -28,7 +28,7 @@
   only screen and (        min-device-pixel-ratio: 2),
   only screen and (                min-resolution: 192dpi),
   only screen and (                min-resolution: 2dppx) {
-    background-image: url("@{file-2x}");
-    background-size: @width-1x @height-1x;
+    background-image: url("{" + file-2x + "}");
+    background-size: width-1x height-1x;
   }
 }
