--- a/assets/styles/mixins/mixins-importer.styl
+++ b/assets/styles/mixins/mixins-importer.styl
@@ -4,9 +4,9 @@
 // normalize.less was combined with two css reset files
 // 1) normalize.less https://github.com/twbs/bootstrap/blob/master/less/normalize.less
 // 2) Reset CSS http://meyerweb.com/eric/tools/css/reset/
-@import "normalize.less";
+@import "normalize.styl";
 
 // Layout
-@import "image.less";
-@import "clearfix.less";
-@import "common-mixins.less";
+@import "image.styl";
+@import "clearfix.styl";
+@import "common-mixins.styl";
